--- a/01_login.html
+++ b/01_login.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
-<body class="bg-dark">
+<body class="bg-dark text-white">
     <div class="container mt-4">
         <div class="row">
             <div class="col-4">
@@ -47,7 +47,7 @@
             </div>
             <div class="col-6">
                 <form method="POST">
-                    <div class="card">
+                    <div class="card bg-dark shadow-1-strong">
                         <div class="card-body">
                             <div class="mb-3">
                                 <label for="">Email</label>
