--- a/01_logout.html
+++ b/01_logout.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
-<body class="bg-dark">
+<body class="bg-dark text-white">
     <div class="container mt-4">
         <div class="row">
             <div class="col-4">
@@ -46,7 +46,11 @@
                 </div>
             </div>
             <div class="col-6">
-                <h3 class="bg-success text-center text-white p-3">Logout Successful</h3>
+                <div class="card bg-dark shadow-1-strong">
+                    <div class="card-body">
+                        <h3 class="text-center text-white p-3">Logout Successful</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
